# image-optimizer

./: .gitattributes  .gitignore  ARCHITECTURE.md  BACKEND.md  BENCHMARKING.md  CHANGELOG.md  DOCUMENTATION.md  FRONTEND.md  GITHUB_ACTIONS.md  MODULARIZATION.md  OPTIMIZATIONS.md  OPTIMIZE.md  PARALLEL_PROCESSING.md  PERFORMANCE.md  PROGRESS_TRACKING_BACKEND.md  PROGRESS_TRACKING_BACKENDOPT.md  PROGRESS_TRACKING_BACKEND_OPTIMIZATIONS.md  PROGRESS_TRACKING_BENCHMARKING.md  PROGRESS_TRACKING_FRONTEND.md  PROGRESS_TRACKING_MEMORY.md  PROGRESS_TRACKING_OPTIMIZATIONS.md  PROGRESS_TRACKING_OPTIMIZE.md  PROGRESS_TRACKING_PERFORMANCE.md  PROGRESS_TRACKING_PROGRESS.md  PROGRESS_TRACKING_PROGRESSOPTIMIZATION.md  PROGRESS_TRACKING_PROGRESSTRACKING.md  PROGRESS_TRACKING_REFACTOR.md  PROGRESS_TRACKING_SIDECAR.md  PROGRESS_TRACKING_STATS copy.md  PROGRESS_TRACKING_TWEAKS.md  PROGRESS_TRACKING_WARMUP.md  PROJECT.md  PROJECT_v2.md  README.md  RUST_BACKEND_ANALYSIS.md  RUST_BACKEND_REDUNDANCIES.md  biome.json  image-optimizer-docs.md  index.html  mod.rs  (+4 more)
.cursor/rules/: tauri-rules.mdc
.github/workflows/: build.yml
scripts/: collect-macos-dylibs.sh  collect-universal-dylibs.sh  sync-version.js
sharp-sidecar/: index.js  macos-post-build.sh  optimizationDefaults.js  package-lock.json  package.json  post-build.js  rename.js
sharp-sidecar/src/config/formats/: defaults.js  index.js  lossless.js
sharp-sidecar/src/processing/: batch.js  optimizer.js
sharp-sidecar/src/utils/: files.js  index.js  logger.js  progress.js
sharp-sidecar/src/workers/: worker-pool.js
sharp-sidecar/test/: analyze-results.js  capture-sidecar-output.js  run-sidecar-test.ps1  run-sidecar-test.sh  run-test.js  sidecar-analysis.md  sidecar-output.json
sidecar-app/: package-lock.json  package.json  rename.js
src/: App.css  App.jsx  App.scss  main.jsx  reset.scss
src-tauri/: .gitignore  2  Cargo.toml  build.rs  libvips_compat.c  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  progress_debouncer.rs  worker_pool.rs
src-tauri/src/benchmarking/: metrics.rs  mod.rs  reporter.rs
src-tauri/src/commands/: image.rs  mod.rs  worker.rs
src-tauri/src/core/: mod.rs  progress.rs  state.rs  task.rs  types.rs
src-tauri/src/processing/: mod.rs  optimizer.rs  svg.rs  validation.rs
src-tauri/src/processing/batch/: config.rs  metrics.rs  mod.rs  processor.rs
src-tauri/src/processing/libvips/: executor.rs  formats.rs  mod.rs  resize.rs
src-tauri/src/processing/pool/: mod.rs  process_pool.rs
src-tauri/src/processing/sharp/: direct_executor.rs  executor.rs  memory_map_executor.rs  mod.rs  progress_handler.rs  types.rs
src-tauri/src/utils/: error.rs  formats.rs  fs.rs  mod.rs  validation.rs
src-tauri/src/worker/: mod.rs  pool.rs  task.rs
src-tauri/src/worker/error/: mod.rs
src-tauri/windows/: hooks.nsh
src/assets/styles/: main.scss
src/assets/styles/app/: _app.scss  app.scss
src/assets/styles/base/: reset.scss  typography.scss  variables.scss
src/assets/styles/components/: CpuMetrics.scss  FloatingMenu.scss  _FloatingMenu.scss  _ProgressBar.scss  _SettingsPanel.scss  _TitleBar.scss  _Toast.scss  _progress.scss
src/components/: CpuMetrics.jsx  Dropzone.jsx  FloatingMenu.jsx  ProgressBar.jsx  SettingsPanel.jsx  TitleBar.jsx  Toast.jsx
src/hooks/: useProgressTracker.js
src/i18n/: index.jsx
src/i18n/locales/: de.json  en.json  es.json  fr.json  nl.json  ru.json
src/utils/: updater.js
