[package]
name = "image-optimizer"
version = "0.1.0"
description = "A Tauri-based Image Optimization App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Optimize release builds
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s" # Optimize for size
lto = true      # Enable link-time optimization
strip = true    # Strip debug symbols

# Speed up debug builds
[profile.dev]
incremental = true

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.42.0", features = ["full", "time"] }
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
lazy_static = "1.5.0"
thiserror = "2.0.11"
anyhow = "1.0.95"

# Optional: Add logging for better debugging
tauri-plugin-log = "2"

# The following dependencies were unused and have been removed:
# crossbeam-channel = "0.5.14"
# parking_lot = "0.12.3"
# sysinfo = "0.33.1"
# enum-map = { version = "2.7.3", features = [], optional = true }

[features]
# Define the benchmarking feature for compile-time optimization
# When enabled, this includes all code needed for performance benchmarking
benchmarking = []
# Keep the old name as an alias for backward compatibility
benchmark = ["benchmarking"]
