[package]
name = "image-optimizer"
version = "0.4.1"
description = "A Tauri-based Image Optimization App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "image_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
cc = "1"

# Optimize release builds
[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "s" # Optimize for size
lto = true      # Enable link-time optimization
strip = true    # Strip debug symbols

# Speed up debug builds
[profile.dev]
incremental = true
opt-level = 0
debug = true

# Optimize dependencies in dev builds (faster linking)
[profile.dev.package."*"]
opt-level = 1
debug = false

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tokio = { version = "1.42", features = ["full", "time"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1.5"
thiserror = "2.0"
anyhow = "1.0"
window-vibrancy = "0.7"
libvips = { package = "libvips-rs", version = "=8.15.1" }

# Auto-update and persistent settings
tauri-plugin-updater = "2"
tauri-plugin-store = "2"

# Override libvips-rs with a vendored patch that fixes Windows type-size mismatches.
# The upstream crate uses c_ulong/c_long for gsize/gint64 which are 32-bit on MSVC,
# causing type errors. The patch replaces these with fixed-width equivalents.
[patch.crates-io]
libvips-rs = { path = "../vendor/libvips-rs" }
